New content for Jan 2018 Vol 14, issue 1.

--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -16,20 +16,26 @@
 
 \vspace{12pt}
 
-As the President has noted the Association has, through its volunteers,
-expended thousands of hours on the North Star's restoration since 2004. In the
-last couple of years, however, various developments at CASM have resulted in a
-diminution in the amount of restoration work we have been able to do. The result
-has been a decline in the number of volunteers working on the aircraft, and a
-corresponding decline in our membership. This in turn has led to an overall
-decline in the Association's activities, including the publication of this
-newsletter. CASM has made some important changes to its personnel, including those
-directly responsible for the restoration of the North Star. The Association is
-already experiencing a positive change in its relationship with the Museum which
-can only be to the good. We look forward to a renewed partnership with CASM to
-our mutual benefit.
+Our Association was incorporated in 2003. We are fortunate that a
+number of the original members of the organization, such as Tim
+Timmins, are still involved as they can provide an historical
+perspective. As Tim says, in the article "Our Members," there have been
+many bumps in the road, and the fact that the aircraft is still a long
+way from completion after 16 years speaks for itself. In January 2017,
+R\'{e}jean (Rej) Demers took up his position as CASM's Conservation Project
+Manager. Rej's first contribution to the Chronicle can be found in the
+"Conservator's Corner." The restoration of the North Star is a priority
+for Rej. He has spent the first year of his mandate gathering
+information and developing systems and procedures which will, in the
+long run, move the restoration of the aircraft forward in a coherent
+manner. I have previously stated the obvious and that is the health and
+vigour of the Association is dependent on the restoration status of the
+aircraft. In the last few years there have been as many bumps in the
+road as there are potholes in Ottawa in the spring. The President is
+very optimistic we have reached a real turning point (see the
+"President's Notes") and wouldn't that be great.
 
-%\vspace{12pt}
+\vspace{12pt}
 
 
 \begin{footnotesize} \raggedleft PNSAC\\
