--- a/pnsac/newsletter/article_ForthEvents.tex
+++ b/pnsac/newsletter/article_ForthEvents.tex
@@ -13,33 +13,36 @@
 %June 5, 2014     \hspace{50mm}\= Board of Directors' Meeting\\
 %{\normalfont\color{red}May 02, 2015}   \hspace{50mm}\= 
 %{\normalfont\color{red}Members' Quarterly Meeting}\\
-\textbf{Thursday, April 13, 2017}   \hspace{48mm}\=  Board of Directors Meeting\\ 
+\textbf{Thursday, April 12, 2018}   \hspace{48mm}\=  Board of Directors Meeting\\ 
 %  Add blank line
  \> \\
-\textbf{Saturday, May 6, 2017}   \hspace{50mm}\=  \\ 
-\end{tabbing}
-\vspace{-5mm}
-PNSAC Speaker Series. Once again, PNS is hosting a lecture at the Canada Aviation \&
-Space Museum given by Jim Mason. The event will include a brief history of the
-TCA Lockheed 10A service, followed by the history of the restored Lockheed
-CF-TCC, it's early restoration and events, as well as participation leading up to
-Air Canada's 70th Anniversary.
-
-\begin{tabbing}
-\textbf{Tuesday, May 23, 2017}   \hspace{52mm}\=  Volunteer Appreciation Dinner\\ 
-%  Add blank line
+\textbf{Saturday, April 14, 2018}   \hspace{48mm}\=  Annual General Meeting\\ 
  \> \\
-\textbf{Saturday and Sunday, June 3 \& 4, 2017}  \hspace{25mm}\= \\ 
+\textbf{Sunday, July 01, 2018}   \hspace{53mm}\=  Canada Day\\ 
+%\textbf{Saturday, May 6, 2017}   \hspace{50mm}\=  \\ 
 \end{tabbing}
-\vspace{-5mm}
-PNS volunteers will display the North Star during the Open Doors Ottawa event.
-
-\begin{tabbing}
-
-\textbf{Saturday, July 01, 2017}   \hspace{50mm}\=  \\ 
-\end{tabbing}
-\vspace{-5mm}
-Canada Day. PNS volunteers will, as usual, take part in the Canada Day celebrations and display the North Star to the public
+%\vspace{-5mm}
+%PNSAC Speaker Series. Once again, PNS is hosting a lecture at the Canada Aviation \&
+%Space Museum given by Jim Mason. The event will include a brief history of the
+%TCA Lockheed 10A service, followed by the history of the restored Lockheed
+%CF-TCC, it's early restoration and events, as well as participation leading up to
+%Air Canada's 70th Anniversary.
+%
+%\begin{tabbing}
+%\textbf{Tuesday, May 23, 2017}   \hspace{52mm}\=  Volunteer Appreciation Dinner\\ 
+%%  Add blank line
+% \> \\
+%\textbf{Saturday and Sunday, June 3 \& 4, 2017}  \hspace{25mm}\= \\ 
+%\end{tabbing}
+%\vspace{-5mm}
+%PNS volunteers will display the North Star during the Open Doors Ottawa event.
+%
+%\begin{tabbing}
+%
+%\textbf{Saturday, July 01, 2017}   \hspace{50mm}\=  \\ 
+%\end{tabbing}
+%\vspace{-5mm}
+%Canada Day. PNS volunteers will, as usual, take part in the Canada Day celebrations and display the North Star to the public
 
 
 %July 01, 2016  \> Canada Day\\
