--- a/pnsac/newsletter/article_MemberInterview.tex
+++ b/pnsac/newsletter/article_MemberInterview.tex
@@ -5,69 +5,58 @@
 % Head
 
 \title{Our Members}
-\author{Interview with Jm Riddoch}
+\author{Interview with Austin J Timmins}
 
 \maketitle
 
 \end{multicols}
 
-\begin{quotation}
-	\textit{Jim Riddoch is one of the earliest and longest serving members of the
-Association. He has made a significant contribution to the operations of the
-Association including working on the aircraft as well as being an officer and
-member of the board of directors. Although officially retired from formal
-positions in the organization, he can still be counted on to help out when
-needed.}
-\end{quotation}
+%\begin{quotation}
+%	\textit{Jim Riddoch is one of the earliest and longest serving members of the
+%Association. He has made a significant contribution to the operations of the
+%Association including working on the aircraft as well as being an officer and
+%member of the board of directors. Although officially retired from formal
+%positions in the organization, he can still be counted on to help out when
+%needed.}
+%\end{quotation}
 
 \begin{multicols}{2}
 
 1.\textit{What is your background in aviation?}
 
-I started with English Electric Aviation Company in 1956 as an
-apprentice technician eventually being assigned to the Mechanical
-Engineering Department as a fuel systems technician. I remained there
-for 5 years until I was 28 years old and married with a daughter. After
-immigrating to Canada in March 1966 I joined DeHavilland Spar Division
-in Malton and then moved to Montreal with Jarry Hydraulics as a
-development engineer. I remained there for 2 years working chiefly on
-development proposals for the wing sweep actuators for F111 aircraft
-and Boeing's proposed supersonic Concorde.
+My aviation experience includes 36 years service in the RCAF and nine
+years with the Canadian Aeronautics and Space Institute. In the RCAF I
+completed radio navigator training, which included communications,
+navigation and air gunner. I later qualified as an airborne
+interception navigator . My operational experience includes air
+transport, search and rescue and training. My assignments included
+Navigation Leader, Aircrew Leader, Squadron Commander, Air Command
+Navigator and Deputy Commander (COO) of the Air Transport Group. I
+logged 9500 hours , mostly on the following aircraft: Beechcraft,
+Dakota, North Star , Mitchell, Yukon, Hercules, and Boeing 707. My
+staff assignments in Europe included movement control (traffic
+management) for 1 Air Division and a tour at The NATO Defense College
+in Rome. 
 
-In 1968 I joined Air Canada as a junior engineer in the Mechanical
-Systems Department and assigned as a landing gear technologist until I
-achieved Professional Engineer status in 1974. I then moved around
-several other departments in engineering and maintenance until I was
-promoted to Superintendent of DC 9 maintenance. In that capacity I was
-involved in the accident investigation into the loss of one aircraft at
-Cincinnati.
-
-I eventually returned to engineering as Director of Interior Systems and
-Equipment to supervise extensive fleet modifications and new aircraft
-acquisitions. I remained in that position until I retired in 1990.
-Following a short stint with First Air I was asked to join a newly formed
-Canadian Aviation Maintenance Council to standardize aircraft
-maintenance trades basic training. I was hired as the Accreditation
-Manager to approve various training establishments including schools,
-companies and military programs, I eventually also took on the job of
-Registration Manager to accept qualified trade technicians.
+On retirement from the RCAF I participated in a Transport
+Canada A Base review of several airports. I then secured full
+employment with Canadian Aeronautics and Space Institute as Executive
+Director, retiring in 1995.
 
 2. \textit{How long have you been involved with Project North Star and how and why did you get involved?}
 
-Following my retirement from the Canadian Aviation Maintenance
-Council in 2003 I was approached by Robert Holmgren to participate in
-a voluntary program to help restore an the Canadair North Star aircraft
-parked outside at the Canada Aviation Museum. Along with Tim
-Timmins and a few others we formed a steering committee to approach
-the Museum about forming a voluntary work force to assist the museum
-staff to restore the aircraft. At first we met with opposition from some
-staff members who felt their jobs were being compromised and possible
-staff reductions. Slowly we were approved by the Museum staff with
-limited supervision and controlled access and work direction. I was
-assigned by the Project North Star Association as Chief Engineer of the
-project although all work was controlled and supervised by the
-Museum's staff manager.
-
+My involvement with efforts to conserve North Star 17515 predates
+Project North Star. Ottawa area members of the 426 Thunderbird Squadron
+Association, mostly retired North Star aircrew, met with the National
+Aviation Museum staff to express their concern about the state of the
+North Star and proposed volunteer involvement in a preservation effort.
+These expressions of concern and interest led to a meeting between the
+Association representatives, where General Adamson presented a proposal
+for the restoration of the aircraft. It was rejected but assurance was
+given that the North Star would be first priority when the new hangar
+was completed Also a North Star Trust Fund would be established. Robert
+Holmgren, an observer at the meeting, then proceeded to develop a
+proposal for volunteers to restore the North Star.
 %\begin{figure}[htbp]
 %   \vspace{2em}
 %   \centering
@@ -81,10 +70,12 @@ Museum's staff manager.
 
 3. \textit{What has been the history of your involvement to date?}
 
-I worked on the Project for 10 years starting in 2003 both as a "hands
-on" volunteer as well as a member of the board of directors and officer
-of the Association. Generally I put in at least two days per week and
-sometimes more. 
+I have been involved from the beginning of efforts to establish PNS,
+first as a member of a Steering Committee, led by Robert Holmgren,
+later, Vice President and then President of PNSAC. My contacts in
+aviation provided much needed advice and support, including access to
+initial funding for PNSAC.
+
 
 %\begin{figure}[htbp]
 %	\vspace{2em}
@@ -110,9 +101,8 @@ sometimes more.
 
 4. \textit{What has been the highlight of your involvement?}
 
-The chief highlights have been the high level of workmanship of the
-volunteers and displaying the aircraft to the public and interested
-persons.
+The highlight of my involvement has to be the establishment of PNS and
+PNSAC.
 
 %\begin{figure}[htbp]
 %   \vspace{2em}
@@ -127,9 +117,13 @@ persons.
 
 5. \textit{What has been the most challenging part of your involvement?}
 
-Keeping the Museum staff and management on side with our goals
-and objectives and recruiting enough new volunteers to keep the
-project going.
+PNS is now in its 16th year. It has been a work in progress with many
+bumps along the way. I spent a lot of time and effort, along with other
+members of the Executive, evening out these bumps. Establishing and
+maintaining effective channels of communication with CASM and CSTM
+required constant attention. Much effort was directed to fund raising,
+publicity, and, finding volunteers. In the beginning, every date
+brought a new challenge.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
