--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,79 +10,58 @@
 
 \maketitle
 
-The last NStar Chronicle was published in March 2016 and since that time we have
-continued our work on the aircraft, but at a greatly reduced pace. Last summer
-the Museum staged a Star Trek event in the Reserve Hanger which affected our
-ability to work on the North Star. We were not asked to suspend our work until
-the end of September, unlike in 2014 when preparations for the Star Wars event
-were being made. 
+Since the last issue of the NStar Chronicle in March of this year we
+have continued to reorganize our volunteer operations under the
+leadership of the Museum's Special Projects Manager, R\'{e}jean (Rej)
+Demers. We have started a recruitment process for new restoration
+volunteers and to date two new people have started work. During the
+summer two more permanent Museum staff joined Rej to replace people who
+have retired. It is obviously taking time for the new Museum staff to
+get to know the complex operations of the Aviation Museum, to get to
+know the Project North Star volunteers and assess their various talents
+and areas of expertise. Consequently, our summer has been quiet but
+steadily productive.
 
-At the end of September 2016, Mike Irvin, the Museum's Conservation Special Projects
-Manager, retired and we were asked to suspend work on the aircraft until a new
-manager was appointed. In January, R\'{e}jean (Rej) Demers was appointed as the new
-Special Projects Manager. Our work on the aircraft resumed on January 30th.
+For several reasons it became necessary to reorganize the location of
+several major Museum artifacts. This affected the North Star aircraft
+which spent the summer outside the Reserve Hanger resulting in some
+problems with water ingress and further bird activity. I am pleased to
+say that the aircraft is now back inside the hangar.
 
-When Project North Star was originally formed in 2003, the Association was
-treated with considerable scepticism by the Museum. It was felt that restoring
-an aircraft of the size and complexity of a North Star, to the exacting
-standards of a national museum, was likely to be beyond the capabilities of a
-group of volunteers and that the project would probably fail.
+The Museum is actively supporting Project North Star and trying to
+facilitate our restoration work wherever possible and is promoting our
+work and future activities. Our Treasurer, Paul Labranche, and I
+recently met with the Museum Foundation. The Foundation is the umbrella
+organization with responsibility for fundraising and business
+development at the three museums, comprising the Museum Corporation,
+(Aviation, Science \& Tech and Agriculture). We had a very productive
+meeting, which among other things has resulted in the Foundation
+deciding to highlight Project North Star in its Fall fundraising mail
+out. This type of collaboration is very good for our Association and we
+hope as good for the Foundation.
 
-We have now completed approximately 70,000 hours of volunteer work over a period
-of 14 years, restoring everything we do to what is acknowledged to be a very
-high standard. Scepticism is a thing of the past and we are now treated as a
-respected and ongoing part of the Museum operations.
+Our biggest challenge at present is to get our website properly
+operational again. A couple of our volunteers with website knowledge
+have indicated a willingness to do the necessary work and we are hoping
+to have the site working and up to date by the time this issue of the
+Nstar Chronicle is published.
 
-Respect must be earned and comes through hard work and in the case of aircraft
-restoration work, attention to detail. Our team of volunteers needs guidance
-both from the Museum staff and from our own senior volunteers. One volunteer has
-been particularly important in helping us the get to the position we are now in.
-Last year he reached a milestone only achieved on two other occasions by a
-volunteer and in each case the volunteer worked at the Science and Technology
-Museum. Our volunteer has worked 10,000 volunteer hours on the North Star and
-for most of this time he also acted as our Project Manager for everything except
-the engines. Bruce Gemmill probably was not aware that he had reached 10,000
-hours when during June, his remarkable contribution was recognized by the Museum
-and in a private event he was presented with a certificate and a gift by Cedric
-St-Amour, the Museum Corporation Volunteer Co-ordinator.
+On December 2nd we held a Members' meeting at the Museum when we were
+fortunate to have Jim Mason join us to talk about the restoration of an
+early Lockheed aircraft flown by TCA. The meeting was well attended in
+a new venue of the Avro Arrow room instead of the Bush Theatre.
+Following Jim's interesting presentation, the group moved to the
+Museum's Restoration Hangar where Rej talked about the progress of the
+North Star restoration and the plans for work in 2018.
 
-I have always seen our Association as having multiple roles. First and foremost,
-we are restoring a major artifact with our volunteers. Secondly, we show off our
-restoration work to the public which in turn brings visitors and revenue into
-the Museum and thirdly through our experienced volunteers we help transfer
-skills to younger and less experienced volunteers.
+One of the initiatives currently underway is to create a visual
+timeline of the work already completed on the North Star restoration
+and the planned future work to bring the project to completion. It is
+anticipated that this visual timeline will be mounted on a display
+board for our members and the public to view.
 
-Planning our work in conjunction with the Museum management and the Conservation
-staff is something we must continuously work at. It is often a fine balancing
-act to decide when to do work on the aircraft in relation to when the Museum is
-having a major event such as Open Doors Ottawa and Canada Day. I am hoping that
-in future we can regularly update our work schedule in conjunction with our
-project plan so that we can more readily have the aircraft available for public
-viewing at the times when the Museum would like us to do so, without having to
-delay our restoration work unnecessarily.
-
-During the last year, we were able to hold two of our successful Lecture Series
-events and are planning to hold another one in May of this year. More details of
-the next event will be available soon.
-
-The Annual General Meeting of the Association was held on March 11, 2017 at the 
-Museum. It was gratifying to see a good turnout of members, given the difficult
-times our organization has gone through in the past few years. Both the Museum's 
-Volunteer Coordinator, Cedric St. Amour, and the new Special Projects Manager 
-R\'{e}jean Demers gave up their Saturday mornings to come and address our members. 
-Their presentations were very well received and are further evidence of a new 
-era in our relationship with the Museum.
-
-I will conclude with an invitation to any of our members not volunteering at
-present to come and join us. Although we have a limit on the number of
-volunteers who can get their hands dirty working on restoration, our organization 
-needs  volunteers to assist with other Association activities including merchandise
-sales, special events, fund raising, communications and administrative work. Whether
-you are working on the plane or doing other Association work you will meet likeminded
-people and have the opportunity to speak to the general public. You do not need to 
-be an expert on aviation or on the North Star to contribute. You can contact me by 
-email at the address at the end of this newsletter if you would like to find out 
-more about volunteering.
+In closing, I am optimistic that 2018 will see increased activity both
+in the aircraft restoration work and also within our Association.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
