--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -49,9 +49,9 @@
 
 \begin{document}
 
-\volume{13} % \volnumber{1}
+\volume{14} % \volnumber{1}
 \issue{1}
-\date{March 2017} 
+\date{January 2018} 
 \titlepage
 
 % Editor's notes
@@ -103,9 +103,9 @@
 
 % Feature article
 
-\begin{article}
-	\input{article_Feature1} 
-\end{article}
+%\begin{article}
+%	\input{article_Feature1} 
+%\end{article}
 
 %\pagebreak
 
@@ -126,9 +126,9 @@
 
 % Recent events ...................................................... %
 
-\begin{article}                 
-	\input{article_RecentEvents}
-\end{article}
+%\begin{article}                 
+%	\input{article_RecentEvents}
+%\end{article}
 
 %\pagebreak
 
@@ -160,7 +160,7 @@
    \input{article_ForthEvents} 
 \end{article}
 
-\pagebreak
+%\pagebreak
 
 
 % Board members/contact info ......................................... %
