--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -4,112 +4,169 @@
 
 % Head
 
-\title{Project Progress Report}
-\subtitle{PNS 2016 Status Update}
-\author{Bruce Gemmill, Peter Trobridge, Garry Dupont}
+\title{Conservator's Corner}
+%\subtitle{PNS 2016 Status Update}
+\author{R\'{e}jean Demers}
 
 \maketitle
 
-\section{Nr 4 Engine}
-\label{sec:engine_4}
+\textit{R\'{e}jean Demers (Rej, to those who work with him) is a Transport Canada
+licensed Aircraft Maintenance Engineer (AME). R\'{e}jean was a small
+business owner in Gatineau QC for over 10 years, working for a wide
+variety of private and commercial aircraft owners and operators.
+Following a stint in Northern Ontario working on turpoprop freighters
+and bulk fuel haulers, he took up his present position as a
+Conservator, Special Projects Manager with Ingenium, Canada's Museums
+of Science and Innovation in January 2017. His main project is the
+restoration of the Canadair North Star DC-4GM at the Canadian Aviation
+and Space Museum. He recounts below his introduction to his new job.}
 
-Work has continued on much of the ancillary equipment for the engine. The
-supercharger and intercooler have been completed and installed, as well as the
-reduction gearbox. The radiators and header tank have been restored and painted, and
-two of the three radiator sections have been installed. Restoration work has
-begun on the air intake system, and many of the fuel and oil lines. 
+Leaving Pickle Lake was like getting shot out of a cannon in a snow
+storm. At that time, Christmas of 2016, I was the last person on my
+crew to leave the YPL base, having seen my colleagues off for the end
+of our tour and the holidays. After a full day of flying, the fleet had
+to be tucked away in the barn ready for service. On Boxing Day, a fresh
+crew would fly in and start another two week tour of line maintenance
+with the company we worked for. However, on that Christmas, I was
+quitting my job.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   \includegraphics[scale=0.5]{"PNS 007-im2".png}
-   \caption*{\small \em Volunteer Peter Trobridge inspecting the air intake fairing from engine \#4 prior to beginning restoration work.}
-   \label{fig:engine_no_4_2}
-\end{figure}
+Nobody knew I was leaving until I got back to the bunkhouse and shared
+Christmas dinner with the remaining pilots and ops personnel. I refer
+to them in these terms now, but then and there, I could say they were
+my friends. In the weeks leading to my departure, no one knew I was
+leaving. No one speaks of breaking out of prison when they are behind
+bars. The difference being the only bars I saw were the Pickle Lake
+Hotel and a watering hole in Thunder Bay called the Apollo.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   \includegraphics[scale=0.5]{"PNS 003-im3".png}
-   \caption*{\small \em Volunteers Robert Desjardins, Bruce Gemmill and Michel Cote hold the refinished coolant tank from engine \#4.  Hours of polishing were required to get the tank to look like new.}
-   \label{fig:coolant_tank}
-\end{figure}
+Driving down the 599 in that snow storm with a truck I had bought for
+\$100 was a white knuckle ride. Knowing this would probably be the last
+time I drove the 2000km distance between Northern Ontario and home in
+Gatineau. The stakes were high: A flight to catch in Ottawa (T-minus
+48hrs), New Year's eve in New York city with my family waiting there
+for me and a new job starting at CASM on the day of my wedding
+anniversary. Could 2017 start with anything less? Arriving to work that
+January 3rd morning was a good feeling, until I got startled by "Manny"
+the mannequin sitting in my predecessor's office chair. If a sense of
+humour was a job requirement, I hoped to get the joke. I would later
+find Manny in other compromising positions, some of which I refuse to
+admit my participation in writing.
 
-The starter motor was found to be very corroded, and disassembly and repair not viable. A
-new unit has been ordered and will be installed once delivered. The fire
-suppression lines are complete and will be installed along with the cowls when
-ready. Some of the cowl panels have been restored, although it has been found
-that this engine has more corrosion than the other three engines, possibly it
-had been in service longer? This has meant that more work is required to
-refurbish each of the many panels. We still hope to have this engine ready for
-installation by next spring. 
+The momentum I have gained in the twelve months since my escape from
+Pickle Lake is only part of what keeps me moving forward. I also count
+on the support of others, namely co-workers and volunteers. My position
+as Project Manager of the North Star restoration relies on the good
+work and cooperation of all hands involved. As the work itself proves
+to be technical and highly detailed, with wide ranges of abilities
+involved, people are always the driving force.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   \includegraphics[scale=0.5]{"PNS 008-im1".png}
-   \caption*{\small \em Volunteer Garry Dupont working on the re-assembly of engine \#4.}
-   \label{fig:engine_no_4}
-\end{figure}
+It was suggested my article for the North Star Chronicle be focused on
+the restoration of a certain four engined artifact \#1967.0645. For
+details on the work that has been carried out by our dedicated group of
+volunteers, I recommend you read my conservation report on the subject.
+It is available online: \textcolor{blue}{\texttt{\url{http://www.projectnorthstar.ca}}}
+or by email: \textcolor{blue}{\email{rdemers@techno-science.ca}}
 
-\section{Fuselage and Main Cabin}
-\label{sec:main_cabin}
 
-With the aircraft moved outside in March, little work was done in the aircraft
-over the winter. Once the temperatures warmed up, we continued work in the main
-cabin to prepare for completion of the painting started last year. Repairs to
-the rear bulkhead are now complete with the installation of several new pieces
-of aluminum to replace corroded ones. A new section of flooring was installed
-where the rear washroom was situated. This required replacing about 1000 rivets!
-
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   \includegraphics[scale=0.5]{"pns 043-im4".png}
-   \caption*{\small \em A single new floor panel at the rear of the main cabin required over 1000 rivets.  
-   Cleco clips are used to accurately align the panel during riveting.}
-   \label{fig:panel_revets}
-\end{figure}
-
-Cleaning and corrosion removal continued throughout the cabin. It seems whenever
-we feel we are near completion, we find more corrosion. We had also planned to
-finish priming the floor and painting the rear bulkhead before the aircraft
-returned to the hanger later in the year, but this was delayed by the shutdown
-of the project while a new Project Manager was hired by the museum. The wood
-floors and walls still need to be repaired, or new panels made, and all will
-require painting. 
-
-\section{Cabin Liners}
-\label{sec:liners}
-
-All the large pieces of liner have either been repaired or replaced, but with
-limitations on space, most remaining work on the cabin liners has been
-postponed. New window surrounds have also been made, but then all liners will
-require painting and stenciling, and this must wait until there is more room in
-the shop and the paint booth. Liners were also made for the top of the heater
-ducts.
-
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   \includegraphics[scale=0.5]{P1020369-im5.png}
-   \caption*{\small \em One of the refurbished heater duct sections with a new fabric headliner secured to the top. The sides are covered with mica insulation that was removed, cleaned and reattached after repairs to the metal duct. These will be installed in the main cabin.}
-   \label{fig:heaters_liners}
-\end{figure}
-
-\section{PNS 2017 Update}
-\label{sec:pnsupdate}
-
-We were able to restart work on the aircraft in late January, following the
-arrival of our new Project manager, Rej Demers. So far, we have completed the
-top cowl panels and one of the radiator flaps, which required a repair patch to
-the outer skin, and the electrical harnesses, which are now waiting for
-painting. Work continues on the air box and the remaining cowl panels.
-
-We have decided not to move the aircraft outside this year. With our efforts
-concentrated on completing engine \#4, it is unlikely we would have the resources
-to also complete the repair work in the cabin needed to allow for priming and
-painting, which is the main reason for moving the aircraft outside in the summer.
+%\section{Nr 4 Engine}
+%\label{sec:engine_4}
+%
+%Work has continued on much of the ancillary equipment for the engine. The
+%supercharger and intercooler have been completed and installed, as well as the
+%reduction gearbox. The radiators and header tank have been restored and painted, and
+%two of the three radiator sections have been installed. Restoration work has
+%begun on the air intake system, and many of the fuel and oil lines. 
+%
+%\begin{figure}[htbp]
+%   \vspace{2em}
+%   \centering
+%   \includegraphics[scale=0.5]{"PNS 007-im2".png}
+%   \caption*{\small \em Volunteer Peter Trobridge inspecting the air intake fairing from engine \#4 prior to beginning restoration work.}
+%   \label{fig:engine_no_4_2}
+%\end{figure}
+%
+%\begin{figure}[htbp]
+%   \vspace{2em}
+%   \centering
+%   \includegraphics[scale=0.5]{"PNS 003-im3".png}
+%   \caption*{\small \em Volunteers Robert Desjardins, Bruce Gemmill and Michel Cote hold the refinished coolant tank from engine \#4.  Hours of polishing were required to get the tank to look like new.}
+%   \label{fig:coolant_tank}
+%\end{figure}
+%
+%The starter motor was found to be very corroded, and disassembly and repair not viable. A
+%new unit has been ordered and will be installed once delivered. The fire
+%suppression lines are complete and will be installed along with the cowls when
+%ready. Some of the cowl panels have been restored, although it has been found
+%that this engine has more corrosion than the other three engines, possibly it
+%had been in service longer? This has meant that more work is required to
+%refurbish each of the many panels. We still hope to have this engine ready for
+%installation by next spring. 
+%
+%\begin{figure}[htbp]
+%   \vspace{2em}
+%   \centering
+%   \includegraphics[scale=0.5]{"PNS 008-im1".png}
+%   \caption*{\small \em Volunteer Garry Dupont working on the re-assembly of engine \#4.}
+%   \label{fig:engine_no_4}
+%\end{figure}
+%
+%\section{Fuselage and Main Cabin}
+%\label{sec:main_cabin}
+%
+%With the aircraft moved outside in March, little work was done in the aircraft
+%over the winter. Once the temperatures warmed up, we continued work in the main
+%cabin to prepare for completion of the painting started last year. Repairs to
+%the rear bulkhead are now complete with the installation of several new pieces
+%of aluminum to replace corroded ones. A new section of flooring was installed
+%where the rear washroom was situated. This required replacing about 1000 rivets!
+%
+%\begin{figure}[htbp]
+%   \vspace{2em}
+%   \centering
+%   \includegraphics[scale=0.5]{"pns 043-im4".png}
+%   \caption*{\small \em A single new floor panel at the rear of the main cabin required over 1000 rivets.  
+%   Cleco clips are used to accurately align the panel during riveting.}
+%   \label{fig:panel_revets}
+%\end{figure}
+%
+%Cleaning and corrosion removal continued throughout the cabin. It seems whenever
+%we feel we are near completion, we find more corrosion. We had also planned to
+%finish priming the floor and painting the rear bulkhead before the aircraft
+%returned to the hanger later in the year, but this was delayed by the shutdown
+%of the project while a new Project Manager was hired by the museum. The wood
+%floors and walls still need to be repaired, or new panels made, and all will
+%require painting. 
+%
+%\section{Cabin Liners}
+%\label{sec:liners}
+%
+%All the large pieces of liner have either been repaired or replaced, but with
+%limitations on space, most remaining work on the cabin liners has been
+%postponed. New window surrounds have also been made, but then all liners will
+%require painting and stenciling, and this must wait until there is more room in
+%the shop and the paint booth. Liners were also made for the top of the heater
+%ducts.
+%
+%\begin{figure}[htbp]
+%   \vspace{2em}
+%   \centering
+%   \includegraphics[scale=0.5]{P1020369-im5.png}
+%   \caption*{\small \em One of the refurbished heater duct sections with a new fabric headliner secured to the top. The sides are covered with mica insulation that was removed, cleaned and reattached after repairs to the metal duct. These will be installed in the main cabin.}
+%   \label{fig:heaters_liners}
+%\end{figure}
+%
+%\section{PNS 2017 Update}
+%\label{sec:pnsupdate}
+%
+%We were able to restart work on the aircraft in late January, following the
+%arrival of our new Project manager, Rej Demers. So far, we have completed the
+%top cowl panels and one of the radiator flaps, which required a repair patch to
+%the outer skin, and the electrical harnesses, which are now waiting for
+%painting. Work continues on the air box and the remaining cowl panels.
+%
+%We have decided not to move the aircraft outside this year. With our efforts
+%concentrated on completing engine \#4, it is unlikely we would have the resources
+%to also complete the repair work in the cabin needed to allow for priming and
+%painting, which is the main reason for moving the aircraft outside in the summer.
 
 
 \begin{footnotesize}
