Incorporated changes from Roger and link to Rej's article.

--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -31,22 +31,22 @@
 Director, President\\
 \email{president@projectnorthstar.ca}}
 
+\address{Garry Dupont\\
+Director, Vice President}\\
+
 \address{Roger Button\\
 Director, Corporate Secretary, NStar Chronicle Editor}\\
+
+\address{Phil Chrysler\\
+Director, Merchandise}\\
+
+\address{Neil Raynor\\
+Director}\\
 
 \address{Bill Tate\\
 Director, Special Events}\\
 %613-523-8817\\
 %\email{billtate@bell.net}}
-
-\address{Phil Chrysler\\
-Director, Merchandise}\\
-
-\address{Garry Dupont\\
-Director}\\
-
-\address{Neil Raynor\\
-Director}\\
 
 
 %\end{minipage}
