--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -43,8 +43,7 @@ hope as good for the Foundation.
 Our biggest challenge at present is to get our website properly
 operational again. A couple of our volunteers with website knowledge
 have indicated a willingness to do the necessary work and we are hoping
-to have the site working and up to date by the time this issue of the
-Nstar Chronicle is published.
+to have the site working and up to date in the near future.
 
 On December 2nd we held a Members' meeting at the Museum when we were
 fortunate to have Jim Mason join us to talk about the restoration of an
