--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -63,7 +63,7 @@ It was suggested my article for the North Star Chronicle be focused on
 the restoration of a certain four engined artifact \#1967.0645. For
 details on the work that has been carried out by our dedicated group of
 volunteers, I recommend you read my conservation report on the subject.
-It is available online: \textcolor{blue}{\texttt{\url{http://www.projectnorthstar.ca}}}
+It is available online: \textcolor{blue}{\texttt{\url{https://documents.techno-science.ca/documents/NorthStarConservationReportOctober2017.pdf}}}
 or by email: \textcolor{blue}{\email{rdemers@techno-science.ca}}
 
 
